Import of BOBTFISH/Log-Message-Structured-0.002 from CPAN.
gitpan-cpan-distribution: Log-Message-Structured
gitpan-cpan-version:      0.002
gitpan-cpan-path:         BOBTFISH/Log-Message-Structured-0.002.tar.gz
gitpan-cpan-author:       BOBTFISH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.002
+  - Fix docs for Stringify::Sprintf
+
 0.001
   - Initial version with the very basic roles extracted (and abstracted) from
     state51 code (with permission).
