Import of BOBTFISH/Log-Message-Structured-0.004 from CPAN.
gitpan-cpan-distribution: Log-Message-Structured
gitpan-cpan-version:      0.004
gitpan-cpan-path:         BOBTFISH/Log-Message-Structured-0.004.tar.gz
gitpan-cpan-author:       BOBTFISH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.004
+  - Fix when MooseX::Getopt is not present.
+
 0.003
   - Add an epochtime field with the simple time in epocseconds for easy
     and cheap comparison without having to parse the 8601 time.
