Import of DAMS/Log-Message-Structured-0.008 from CPAN.
gitpan-cpan-distribution: Log-Message-Structured
gitpan-cpan-version:      0.008
gitpan-cpan-path:         DAMS/Log-Message-Structured-0.008.tar.gz
gitpan-cpan-author:       DAMS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.008
+  - new component to filter in / out attributes
+  - bugfixes
+
 0.007
   - stringify is not required anymore, the class can compose zero or more stringifiers now.
 
