--- a/Changes
+++ b/Changes
@@ -1,3 +1,14 @@
+0.011
+  - fix prereqs
+
+0.010
+  - YAML stringifier
+  - Documentation fixes
+  - class name attribute added
+
+0.009
+  - added missing requirement
+
 0.008
   - new component to filter in / out attributes
   - bugfixes
